<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            tools:context=".view.MainActivity">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:gravity="center"
                android:textSize="36dp"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/profile_pic"
                android:background="@drawable/avatar"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/title"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/avatar"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="24sp"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintLeft_toLeftOf="parent"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                android:hint="@string/email"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="24sp"
                android:hint="@string/phone"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/phone"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="24sp"
                android:hint="@string/gender"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gender"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="24sp"
                android:hint="@string/dob"
                android:layout_marginTop="24dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/add_members"
                app:layout_constraintTop_toBottomOf="@id/dob"
                android:layout_marginTop="28dp"
                android:background="@color/colorButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>