<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:gravity="center"
        android:textSize="36dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/add_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:padding="18dp"
        android:text="@string/add_members"
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="60dp" />

    <Button
        android:id="@+id/view_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:padding="18dp"
        android:text="@string/view_members"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/add_members"
        tools:layout_editor_absoluteX="60dp" />

    <Button
        android:id="@+id/edit_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:padding="18dp"
        android:text="@string/edit_members"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/view_members"
        tools:layout_editor_absoluteX="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>